--- a/package.json
+++ b/package.json
@@ -2,5 +2,10 @@
   "name": "chat-front",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "parcel": "^2.8.2"
+  },"scripts": {
+    "dev": "parcel src/index.html"
+  }
 }
