--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "firebase": "^9.15.0",
     "parcel": "^2.8.2"
-  },"scripts": {
+  },
+  "scripts": {
     "dev": "parcel src/index.html"
   }
 }
